--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
     @apply bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500;
-
 }
