--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,5 +4,5 @@
 
 
 body {
-    @apply bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500;
+    @apply bg-gradient-to-r from-indigo-500 via-purple-400 to-sky-300;
 }
